--- a/app/src/main/res/layout/activity_register_layout.xml
+++ b/app/src/main/res/layout/activity_register_layout.xml
@@ -38,7 +38,8 @@
             android:layout_weight="0.1">
 
         </LinearLayout>
-        <android.support.design.widget.TextInputLayout
+
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.5"
@@ -46,7 +47,6 @@
             android:layout_marginRight="10dp"
             android:alpha="0.8"
             android:ems="10"
-            android:hint="Name"
             android:inputType="textPersonName"
             android:text=""
             >
@@ -61,8 +61,9 @@
                 android:text=""
 
                 />
-        </android.support.design.widget.TextInputLayout>
-        <android.support.design.widget.TextInputLayout
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.5"
@@ -81,8 +82,9 @@
             android:text=""
 
             />
-        </android.support.design.widget.TextInputLayout>
-        <android.support.design.widget.TextInputLayout
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.5"
@@ -101,9 +103,9 @@
                 android:text=""
 
                 />
-        </android.support.design.widget.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.5"
@@ -122,7 +124,7 @@
                 android:text=""
 
                 />
-        </android.support.design.widget.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
