--- a/app/src/main/res/layout/prospectowners.xml
+++ b/app/src/main/res/layout/prospectowners.xml
@@ -15,16 +15,15 @@
         android:orientation="vertical">
 
 
-        <com.google.android.material.textfield.TextInputLayout
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/fieldNameowner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
-            android:textColor="@android:color/black"
             android:textSize="12sp"
             android:textStyle="bold" />
 
-        <com.google.android.material.textfield.TextInputLayout
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/nameowner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,10 +32,9 @@
             android:layout_marginLeft="50dp"
             android:layout_marginTop="10dp"
             android:text=""
-            android:textColor="@android:color/black"
             android:textSize="12sp" />
 
-        <com.google.android.material.textfield.TextInputLayout
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/mobileowner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -44,12 +42,11 @@
             android:layout_marginStart="50dp"
             android:layout_marginLeft="50dp"
             android:layout_marginTop="10dp"
-            android:textColor="@android:color/black"
             android:textSize="12sp"
 
             />
 
-        <com.google.android.material.textfield.TextInputLayout
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/addressowner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -57,11 +54,9 @@
             android:layout_marginStart="50dp"
             android:layout_marginLeft="50dp"
             android:layout_marginTop="10dp"
-            android:textColor="@android:color/black"
-
             android:textSize="12sp" />
 
-        <com.google.android.material.textfield.TextInputLayout
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/costowner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -69,8 +64,6 @@
             android:layout_marginStart="50dp"
             android:layout_marginLeft="50dp"
             android:layout_marginTop="10dp"
-            android:textColor="@android:color/black"
-
             android:textSize="12sp" />
 
         <com.google.android.material.button.MaterialButton
