--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents"/>
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light" />
 
     <style name="HeaderBar">
         <item name="android:background">#303F9F</item>
