--- a/app/src/main/res/layout/activity_owner_layout.xml
+++ b/app/src/main/res/layout/activity_owner_layout.xml
@@ -19,24 +19,24 @@
             android:layout_height="match_parent"
             app:defaultNavHost="true"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            app:navGraph="@navigation/nav_graph_search" />
+            app:navGraph="@navigation/nav_graph_owner_profile" />
     </FrameLayout>
 
     <FrameLayout
-        android:id="@+id/host_profile_container"
+        android:id="@+id/host_pending_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:visibility="gone">
 
         <fragment
-            android:id="@+id/host_profile_fragment"
+            android:id="@+id/host_pending_fragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:defaultNavHost="true"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            app:navGraph="@navigation/nav_graph_profile" />
+            app:navGraph="@navigation/nav_graph_owner_requests" />
     </FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -44,6 +44,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        app:menu="@menu/navigation" />
+        app:menu="@menu/owner_navigation" />
 
 </LinearLayout>
