--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -8,19 +9,23 @@
             type="com.example.android.e7gzlykora.viewmodels.SearchFragmentViewModel" />
     </data>
 
-    <androidx.drawerlayout.widget.DrawerLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/search_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginTop="45dp"
+            android:layout_marginBottom="184dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:id="@+id/textView"
@@ -48,14 +53,14 @@
                 android:layout_margin="15dp"
                 android:orientation="horizontal">
 
-                <Spinner
+                <androidx.appcompat.widget.AppCompatSpinner
                     android:id="@+id/spinner"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:theme="@android:style/Theme.Holo.Light" />
 
-                <Spinner
+                <androidx.appcompat.widget.AppCompatSpinner
                     android:id="@+id/spinner2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -80,7 +85,7 @@
                     android:text="Date Details"
                     android:textSize="15sp" />
 
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/chooseDate"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
@@ -107,7 +112,7 @@
                 android:layout_margin="15dp"
                 android:orientation="horizontal">
 
-                <CheckBox
+                <com.google.android.material.checkbox.MaterialCheckBox
                     android:id="@+id/checkbox1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -115,10 +120,9 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="15dp"
                     android:checked="false"
-                    android:onClick="check1"
                     android:text="Single Time" />
 
-                <CheckBox
+                <com.google.android.material.checkbox.MaterialCheckBox
                     android:id="@+id/checkbox2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -126,7 +130,6 @@
                     android:layout_marginLeft="75dp"
                     android:layout_marginTop="15dp"
                     android:checked="false"
-                    android:onClick="check2"
                     android:text="Weekly" />
 
 
@@ -148,14 +151,14 @@
                 android:layout_margin="15dp"
                 android:orientation="horizontal">
 
-                <Spinner
+                <androidx.appcompat.widget.AppCompatSpinner
                     android:id="@+id/spinner3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:theme="@android:style/Theme.Holo.Light" />
 
-                <Spinner
+                <androidx.appcompat.widget.AppCompatSpinner
                     android:id="@+id/spinner4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -165,7 +168,7 @@
 
             </LinearLayout>
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/search"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -175,6 +178,5 @@
                 android:textSize="15sp" />
         </LinearLayout>
 
-    </ScrollView>
-    </androidx.drawerlayout.widget.DrawerLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
